# Vortex-V2

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml
.github/: dependabot.yaml
cogs/: general.py  help.py
src/: constants.py  main.py
src/assets/images/: vortex.psd
src/assets/templates/: template_cog.py  template_task.py
src/cogs/: fun.py  general.py  help.py
src/templates/: template_cog.py  template_task.py
src/utility/: bot.py  util.py
utility/: bot.py
