[tool.poetry]
name = "vortex"
version = "2.0.0"
description = "A multi-purpose Discord bot."
authors = ["Cosmo <cosmin.dulgheru.alex@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
